This a is a part of my software engineering course

--- a/website/templates/add_shop_items.html
+++ b/website/templates/add_shop_items.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Add Shop Items {% endblock %}
+{% block title %} Add Donation Items {% endblock %}
 
 
 {% block body %}
@@ -10,10 +10,10 @@
         <tr>
             <th scope="col">Product Name</th>
             <th scope="col">Category</th>
-            <th scope="col">Current Price</th>
+            <th scope="col">Current Delivery expense</th>
             <th scope="col">In Stock</th>
             <th scope="col">Picture</th>
-            <th scope="col">Flash Sale</th>
+            <th scope="col">Quick Delivery</th>
             <th scope="col">Add</th>
 
         </tr>
