--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -6,20 +6,20 @@
 
 <table class="table table-dark table-hover">
     <thead>
-        <h2 class="text-center text-white">Commerce</h2>
+        <h2 class="text-center text-white">Donation</h2>
         <tr>
-            <th scope="col">Customers</th>
-            <th scope="col">Shop Items</th>
-            <th scope="col">Add Shop Items</th>
+            <th scope="col">Consumers</th>
+            <th scope="col">Available electronics</th>
+            <th scope="col">Add electronics</th>
             <th scope="col">View Orders</th>
 
         </tr>
     </thead> 
     <tbody>
         <tr>
-        <td><a href="/customers">Customers</a></td>
-        <td><a href="/shop-items">Shop Items</a></td>
-        <td><a href="/add-shop-items">Add Shop Items</a></td>
+        <td><a href="/customers">Consumers</a></td>
+        <td><a href="/shop-items">Available electronics</a></td>
+        <td><a href="/add-shop-items">Add electronics</a></td>
         <td><a href="/view-orders">View Orders</a></td>
         </tr>
     </tbody>
@@ -27,13 +27,13 @@
 <div class="spacer"></div>
 <table class="table table-dark table-hover">
     <thead>
-        <h2 class="text-center text-white">Sales Report</h2>
+        <h2 class="text-center text-white">Donation Report</h2>
         <tr>
-            <th scope="col">Sales by Product</th>
-            <th scope="col">Sales by Category</th>
-            <th scope="col">Sales by Time period</th>
-            <th scope="col">Repeat Customers</th>
-            <th scope="col">Top Selling Products</th>
+            <th scope="col">Consumed by Product</th>
+            <th scope="col">Comsumed by Category</th>
+            <th scope="col">Consumed by Time period</th>
+            <th scope="col">Repeated Consumer</th>
+            <th scope="col">Top demanding Products</th>
         </tr>
     </thead> 
     <tbody>
