--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
     <link rel="icon" href="{{ url_for('static', filename='/images/favicon.ico') }}" type="image/png">
-    <title>Nexshop | {% block title %} {% endblock %}</title>
+    <title>TechShare | {% block title %} {% endblock %}</title>
 
     <style>
         html, body {
@@ -45,13 +45,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/" style="font-family: cursive; font-size: 19px;">Nexshop</a>
+                            <a class="nav-link active" aria-current="page" href="/" style="font-family: cursive; font-size: 19px;">TechShare</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-grey" href="#" style="font-size: 17px;">About Us</a>
+                            <a class="nav-link text-grey" href="#" style="font-size: 17px;">About Us:We are creating impact by charity</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-grey" href="#" style="font-size: 17px;">Contact us</a>
+                            <a class="nav-link text-grey" href="#" style="font-size: 17px;">Contact us at :+60198982147</a>
                         </li>
                     </ul>
 
@@ -109,8 +109,8 @@
         </div>
 
         <footer class="container-fluid text-center p-2 mt-5" style="background-color: orange; color: white;">
-            <a href="https://github.com/Frost-Codes" style="color: white;">Nexshop</a> | <span>
-                <i class="fa-sharp fa-regular fa-copyright"></i></span> 2024 All rights reserved
+            <a href="https://github.com/Frost-Codes" style="color: white;">TechShare</a> | <span>
+                <i class="fa-sharp fa-regular fa-copyright"></i></span> 2025 All rights reserved
         </footer>
     </div>
 
