--- a/website/templates/category_report.html
+++ b/website/templates/category_report.html
@@ -4,14 +4,14 @@
 
 {% block body %}
 <div class="container">
-    <h1 style="text-align: center; color: #ffffff;">Sales by Category Report</h1>
+    <h1 style="text-align: center; color: #ffffff;">Donation by Category Report</h1>
     <table class="table table-dark table-hover">
         <thead>
             <tr>
                 <th scope="col">S/N</th>
                 <th scope="col">Category</th>
                 <th scope="col">Total Orders</th>
-                <th scope="col">Total Quantity Sold</th>
+                <th scope="col">Total Quantity </th>
                 <th scope="col">Total Revenue</th>
             </tr>
         </thead>
