--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,19 +12,19 @@
         <div class="list-group" id="right1">
             <a href="/category?category=Jewelry%20%26%20Watches" class="list-group-item list-group-item-action">
                 <i class="fa fa-gem" aria-hidden="true"></i>
-                <span class="link-name">Jewelry & Watches</span>
+                <span class="link-name">Newly Used Gadget</span>
             </a>
             <a href="/category?category=Automotive" class="list-group-item list-group-item-action">
                 <i class="fa fa-car" aria-hidden="true"></i>
-                <span class="link-name">Automotive</span>
+                <span class="link-name">Up Coming: Automotive</span>
             </a>
             <a href="/category?category=Home%20%26%20Office" class="list-group-item list-group-item-action">
                 <i class="fa fa-home"></i>                
-                <span class="link-name">Home & Office</span>
+                <span class="link-name">Up Coming: Home & Office</span>
             </a>
             <a href="/category?category=Fashion" class="list-group-item list-group-item-action">
                 <i class="fa fa-tshirt" aria-hidden="true"></i>
-                <span class="link-name">Fashion</span>
+                <span class="link-name">Up Coming: Fashion</span>
             </a>
             <a href="/category?category=Electronics" class="list-group-item list-group-item-action">
                 <i class="fa fa-mobile-alt" aria-hidden="true"></i>
@@ -32,19 +32,19 @@
             </a>
             <a href="/category?category=Books%20%26%20Media" class="list-group-item list-group-item-action">
                 <i class="fa fa-book" aria-hidden="true"></i>
-                <span class="link-name">Books & Media</span>
+                <span class="link-name">Up Coming: Books & Media</span>
             </a>
             <a href="/category?category=Beauty%20%26%20Personal Care" class="list-group-item list-group-item-action">
                 <i class="fa fa-spa" aria-hidden="true"></i>
-                <span class="link-name">Beauty & Personal Care</span>
+                <span class="link-name">Up Coming: Beauty & Personal Care</span>
             </a>
             <a href="/category?category=Sports%20%26%20Outdoors" class="list-group-item list-group-item-action">
                 <i class="fa fa-football-ball" aria-hidden="true"></i>
-                <span class="link-name">Sports & Outdoors</span>
+                <span class="link-name">Up Coming: Sports & Outdoors</span>
             </a>
             <a href="/category?category=Toys%20%26%20Games" class="list-group-item list-group-item-action">
                 <i class="fa fa-puzzle-piece" aria-hidden="true"></i>
-                <span class="link-name">Toys & Games</span>
+                <span class="link-name">Up Coming: Toys & Games</span>
             </a>
 
         </div>
@@ -52,7 +52,7 @@
 
 
       <div class="col-md-7" style="margin: 3px;">
-        <img src="../static/images/center.gif" alt="" style="width: 600px; height: 365px; border-radius: 10px;">
+        <img src="../static/images/TechSHare.jpg" alt="" style="width: 600px; height: 365px; border-radius: 10px;">
       </div>
       <div class="col-md-2">
         <div class="row" style="background-color: white; border-radius: 10px;">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col">
                     <h6 style="font-family:'Times New Roman', Times, serif; font-size: 12px; margin-left: -40px; font-weight: 600;">EASY RETURN</h6>
-                    <p style="font-size: small; color: gray; margin-left: -30px; margin-top: -10px;">Quick Refund</p>
+                    <p style="font-size: small; color: gray; margin-left: -30px; margin-top: -10px;">Quick initiatives</p>
                 </div>
             </div>
 
@@ -82,14 +82,14 @@
                     <img src="../static/images/payment.png" alt="" style="width: 30px; height: 30px; margin-left: -30px;">
                 </div>
                 <div class="col">
-                    <h6 style="font-family:'Times New Roman', Times, serif; font-size: 12px; margin-left: -40px; font-weight: 600;">SELL ON AMAZON</h6>
-                    <p style="font-size: small; color: gray; margin-left: -30px; margin-top: -10px;">FBA Program</p>
+                    <h6 style="font-family:'Times New Roman', Times, serif; font-size: 12px; margin-left: -40px; font-weight: 600;">Donation for locals</h6>
+                    <p style="font-size: small; color: gray; margin-left: -30px; margin-top: -10px;">World-Wide electronics donation program</p>
                 </div>
             </div>
         </div>
         <div class="row" style="margin-top: 12px;">
             <div class="col">
-                <img src="../static/images/right2.gif" alt="" class="right2">
+                <img src="../static/images/BootCamp.png" alt="" class="right2">
             </div>
         
         </div>
@@ -102,19 +102,19 @@
     <div class="row" style="margin: 8px;">
         <div class="col" style="display: flex; background-color: white; border-radius: 10px; padding: 7px; margin: 5px;">
             <img src="../static/images/techweek.png" alt="" style="width: 30px; height: 30px;">
-            <h6 style="margin: 4px">Tech Week</h6>
+            <h6 style="margin: 4px">Free Gadget Week</h6>
         </div>
         <div class="col" style="display: flex; background-color: white; border-radius: 10px; padding: 7px; margin: 5px;">
             <img src="../static/images/FreeDelivery.png" alt="" style="width: 30px; height: 30px;">
-            <h6 style="margin: 4px">Free Delivery</h6>
+            <h6 style="margin: 4px">Free Delivery At AIU</h6>
         </div>
         <div class="col" style="display: flex; background-color: white; border-radius: 10px; padding: 7px; margin: 5px;">
             <img src="../static/images/food.png" alt="" style="width: 30px; height: 30px;">
-            <h6 style="margin: 4px">Amazon Food</h6>
+            <h6 style="margin: 4px">Earn Top Doner Badge</h6>
         </div>
         <div class="col" style="display: flex; background-color: white; border-radius: 10px; padding: 7px; margin: 5px;">
             <img src="../static/images/airtime.png" alt="" style="width: 30px; height: 30px;">
-            <h6 style="margin: 4px">Airtime & Bills</h6>
+            <h6 style="margin: 4px">Create Doner Network</h6>
         </div>
  
     </div>
@@ -137,7 +137,7 @@
                 <div class="row" style="margin-top: 10px;">
                 
                     <div class="col">
-                        <h5 style="font-weight: 600; font-family: 'Times New Roman', Times, serif;">RM {{ item.current_price }}</h5>
+                        <h5 style="font-weight: 600; font-family: 'Times New Roman', Times, serif;">Delivary cost per kilo:RM {{ item.current_price }}</h5>
                         <p style="color: gray;">{{ item.product_category }}</p>
                     </div>
 
