--- a/website/templates/monthly_report.html
+++ b/website/templates/monthly_report.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Monthly Sales Report {% endblock %}
+{% block title %} Monthly donation Report {% endblock %}
 
 {% block body %}
 <style>
@@ -11,14 +11,14 @@
 </style>
 
 <div class="container">
-    <h1 class="center-title">Monthly Sales Report</h1>
+    <h1 class="center-title">Monthly donation Report</h1>
     <table class="table table-dark table-hover">
         <thead>
             <tr>
                 <th scope="col">Period</th>
                 <th scope="col">Total Orders</th>
-                <th scope="col">Total Quantity Sold</th>
-                <th scope="col">Total Revenue</th>
+                <th scope="col">Total Quantity Donated</th>
+                <th scope="col">Total Delivery Expense</th>
             </tr>
         </thead>
         <tbody>
