--- a/website/templates/product_comparison_report.html
+++ b/website/templates/product_comparison_report.html
@@ -10,8 +10,8 @@
             <tr>
                 <th scope="col">S/N</th>
                 <th scope="col">Product Name</th>
-                <th scope="col">Current Price</th>
-                <th scope="col">Total Quantity Sold</th>
+                <th scope="col">Current Delivery Expense</th>
+                <th scope="col">Total Quantity Donated</th>
             </tr>
         </thead>
         <tbody>
