--- a/website/templates/product_report.html
+++ b/website/templates/product_report.html
@@ -17,10 +17,10 @@
             <tr>
                 <th scope="col">S/N</th>
                 <th scope="col">Product Name</th>
-                <th scope="col">Price</th>
+                <th scope="col">Shipping Cost</th>
                 <th scope="col">Total Orders</th>
-                <th scope="col">Total Quantity Sold</th>
-                <th scope="col">Total Revenue</th>
+                <th scope="col">Total Quantity Delivered</th>
+                <th scope="col">Total Delivery Expenses</th>
             </tr>
         </thead>
         <tbody>
