--- a/website/templates/repeat_customers_report.html
+++ b/website/templates/repeat_customers_report.html
@@ -13,7 +13,7 @@
                 <th scope="col">Address</th>
                 <th scope="col">Email</th> <!-- Added Email column -->
                 <th scope="col">Total Orders</th>
-                <th scope="col">Total Spent</th>
+                <th scope="col">Total Delivery cost of items to him/her</th>
             </tr>
         </thead>
         <tbody>
