--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -28,8 +28,8 @@
             
                 <div class="col">
 
-                    <h5 style="font-weight: 600; font-family: 'Times New Roman', Times, serif;">RM {{ item.current_price }}</h5>
-                    <strike><p style="color: gray;">RM {{ item.previous_price}}</p></strike>
+                    <h5 style="font-weight: 600; font-family: 'Times New Roman', Times, serif;">Delivery fee:RM {{ item.current_price }}</h5>
+                    <strike><p style="color: gray;">Delivery fee:RM {{ item.previous_price}}</p></strike>
                 </div>
 
                 <div class="col">
