--- a/website/templates/shop_items.html
+++ b/website/templates/shop_items.html
@@ -17,10 +17,10 @@
             <th scope="col">Date Added</th>
             <th scope="col">Product Name</th>
             <th scope="col">Product Category</th>
-            <th scope="col">Current Price</th>
+            <th scope="col">Current Delivary Price</th>
             <th scope="col">In Stock</th>
             <th scope="col">Product Picture</th>
-            <th scope="col">Flash Sale</th>
+            <th scope="col">Quick Delivery</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
