--- a/website/templates/cart.html
+++ b/website/templates/cart.html
@@ -9,7 +9,7 @@
     <div class="row">
         {% if cart %}
 
-        <h1 class="text-center mb-5" style="color: white;">Shopping Cart</h1>
+        <h1 class="text-center mb-5" style="color: white;">Items taken in Cart</h1>
         <div class="col-sm-8">
             <div class="card">
                 <div class="card-body">
@@ -58,7 +58,7 @@
                         {% endfor %}
 
 
-                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount <span>RM <span id="amount_tt">{{ amount }}</span></span></li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Free <span>RM <span id="amount_tt">{{ amount }}</span></span></li>
 
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div style="margin-top: 15px;">
