--- a/website/templates/update_item.html
+++ b/website/templates/update_item.html
@@ -10,10 +10,10 @@
         <tr>
             <th scope="col">Product Name</th>
             <th scope="col">Product Category</th>
-            <th scope="col">Current Price</th>
+            <th scope="col">Current Delivery Price</th>
             <th scope="col">In Stock</th>
             <th scope="col">Picture</th>
-            <th scope="col">Flash Sale</th>
+            <th scope="col">Quick Delivery</th>
             <th scope="col">Add</th>
 
         </tr>
